# mermaid_agent

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  nginx.conf
.cursor/rules/: backend-patterns.mdc  frontend-patterns.mdc  project-overview.mdc
backend/: .env.example  Dockerfile  main.py  pyproject.toml  schema.py
backend/app/: main.py  schema.py
backend/app/services/: agent.py  doc_fetcher.py  prompts.py
backend/services/: ai.py  doc_fetcher.py  prompts.py  rag.py
backend/test/: test_api.py  test_rag.py
backend/tests/: test_agent.py  test_api.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: ChatPanel.svelte  Editor.svelte  Preview.svelte  api.ts  chartSamples.ts  chat.svelte.ts  markdown.ts  types.ts  ws.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/test/: e2e.spec.ts
